Fixing the image "jumping" on page load

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -413,7 +413,18 @@ a.memory, a.scrapbook
 
 /* ==================================== MASONRY STUFF */
 
+.masonry-loading-spinner
+  position: relative
+  margin-bottom: 2em
+
+  .spinner
+    height: 100px
+
+.masonry-grid, #scrapbookImages
+  display: none
+
 .masonry-grid
+  margin: 0 auto
 
   .masonry
     width: 320px
@@ -421,6 +432,8 @@ a.memory, a.scrapbook
 
     .detail
       margin: 0 10px 10px 10px
+
+
 
 /* ==================================== SCRAPBOOKS */
 
